# aura

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DEVICE-UPLOAD-PROTOCOL.md  HANDOFF.md  ROADMAP.md  SYSTEM-STATUS.md  VISION.md
src/: __init__.py  cli.py  config.py
src/api/: ingest.py
src/db/: engine.py  models.py  persist.py
src/pipeline/: align.py  diarize.py  extract.py  processor.py  speaker_embed.py  transcribe.py  vad.py  watcher.py
src/speakers/: registry.py
tests/: test_pipeline.py
