[project]
name = "aura"
version = "0.1.0"
description = "Always-on audio processing for memory augmentation"
requires-python = ">=3.11"
dependencies = [
    # Audio processing
    "faster-whisper>=1.0.0",
    "pyannote.audio>=3.1",
    "speechbrain>=1.0",
    "silero-vad>=5.0",
    "pydub>=0.25",
    "soundfile>=0.12",
    # API
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.9",
    # Database
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "pgvector>=0.2",
    # Task queue
    "celery[redis]>=5.3",
    # ML / NLP
    "torch>=2.2,<2.9",
    "torchaudio>=2.2,<2.9",
    "transformers>=4.38",
    "sentence-transformers>=2.5",
    # Utilities
    "pydantic>=2.6",
    "pydantic-settings>=2.1",
    "structlog>=24.1",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
    "mypy>=1.8",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
